Implement Phase 1 tools foundation (issues 29-35)

--- a/tool/schemas/tool-manifest-v1.json
+++ b/tool/schemas/tool-manifest-v1.json
@@ -59,6 +59,7 @@
         "type": {
           "type": "string",
           "enum": [
+            "native",
             "http",
             "stdio",
             "mcp"
