ci: gate gosec on medium severity and above

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,12 +102,12 @@ jobs:
         run: go install github.com/securego/gosec/v2/cmd/gosec@v2.22.11
 
       - name: Run gosec (root module)
-        run: $(go env GOPATH)/bin/gosec ./...
+        run: $(go env GOPATH)/bin/gosec -severity medium ./...
 
       - name: Run gosec (irisadapter module)
         working-directory: irisadapter
-        run: $(go env GOPATH)/bin/gosec ./...
+        run: $(go env GOPATH)/bin/gosec -severity medium ./...
 
       - name: Run gosec (examples module)
         working-directory: examples
-        run: $(go env GOPATH)/bin/gosec ./...
+        run: $(go env GOPATH)/bin/gosec -severity medium ./...
