--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,7 +102,7 @@ jobs:
         run: go install github.com/securego/gosec/v2/cmd/gosec@v2.22.11
 
       - name: Run gosec (root module)
-        run: $(go env GOPATH)/bin/gosec -severity medium ./...
+        run: $(go env GOPATH)/bin/gosec -severity medium -exclude-dir=examples -exclude-dir=irisadapter ./...
 
       - name: Run gosec (irisadapter module)
         working-directory: irisadapter
